home.html -> index.html
Chaged Home nav html file

--- a/wordle.html
+++ b/wordle.html
@@ -5,12 +5,12 @@
 </head>
 
 <header>
-       <a href="home.html">The Mineshaft</a>
+       <a href="index.html">The Mineshaft</a>
 </header>
 
 <nav>
     <ul>
-      <a href="home.html">Home</a>
+      <a href="index.html">Home</a>
       <a href="roulette.html">Roulette</a>
       <a href="wordle.html" class="active">Wordle</a>
       <a href="about.html">About</a>
