--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
 </head>
 
 <header>
-       <a href="home.html">The Mineshaft</a>
+       <a href="index.html">The Mineshaft</a>
 </header>
 
 <nav>
     <ul>
-      <a href="home.html" class="active">Home</a>
+      <a href="index.html" class="active">Home</a>
       <a href="roulette.html">Roulette</a>
       <a href="wordle.html">Wordle</a>
       <a href="about.html">About</a>
