Now displays correct word when user loses

--- a/wordle.html
+++ b/wordle.html
@@ -242,7 +242,7 @@
         }
         else{
             messageBox = document.getElementById("result");
-            messageBox.innerHTML = "You Lost!";
+            messageBox.innerHTML = "You Lost! The word was: " + theWord;
             messageBox.style.color = "#d63024";
             gameOver = true;
         }
