Fixed function name

--- a/wordle.html
+++ b/wordle.html
@@ -147,7 +147,7 @@
 	}
 	
 	// Function that gathers physical keyboard input
-	function physKeyboard(e){
+	function physicalKeyboard(e){
 		checkKeyType(e.key);
 	}
     
