--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
     <center>
         <br><br>
         <div>Welcome to the Mineshaft!</div><br><br><br>
-        <div>Not much here. Just a broken CS:GO crate wheel,</div>
-        <div>or roulette style wheel for picking random names.</div>
+        <div>Not much here. Just a wordle recreation.</div>
     </center>
 </body>
