--- a/wordle.html
+++ b/wordle.html
@@ -106,5 +106,5 @@
         </div>
     </center>
 </body>
-<script src='site-mode.js'></script>
-<script src='wordle.js'></script>
+<script src='javascript/site-mode.js'></script>
+<script src='javascript/wordle.js'></script>
