Added Mode Toggle switch

--- a/wordle.html
+++ b/wordle.html
@@ -7,6 +7,7 @@
 
 <header>
        <a href="index.html">The Mineshaft</a>
+       <img id="mode-toggle" onclick='toggleMode()' src='icons/dark-mode.png'></img>
 </header>
 
 <nav>
