Fixed wordle grid not changing style with mode

--- a/wordle.html
+++ b/wordle.html
@@ -19,7 +19,7 @@
 </nav>
 
 <body onload="startGame()">
-    <link rel="stylesheet" href="css/dark/wordle.css">
+    <link rel="stylesheet" id='body-stylesheet' href="css/dark/wordle.css">
     <center>
         <br>
         <div>
